<resources>
    <string name="app_name">ShareChatAssignment</string>
    <string name="age">Age</string>
    <string name="dob">DoB</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trending">Trending</string>
    <string name="contact">Contact</string>

</resources>
